# On-The-Go-Coding-Test

./: README.md  dash_app.py  main.py  pyproject.toml
data/: README.md
diagnostics/: index.json
diagnostics/backtesting/: AAPL_daily_thr200_w1-5.json
diagnostics/classification/: AAPL_daily_thr200_w1-5.json
diagnostics/regression/: AAPL_daily_ridge_target_1d.json  AAPL_daily_ridge_target_1w.json  AAPL_daily_ridge_target_2d.json  AAPL_daily_ridge_target_3d.json  AAPL_daily_ridge_target_5d.json
diagnostics/reports/: consistency_metrics.json
diagnostics/tables/: drift_segment_0_1.csv  drift_segment_1_2.csv  drift_segment_2_3.csv  horizon_summary.csv
models/: README.md
models/classification/models/: AAPL_daily_thr200_w1-5.joblib
models/classification/scalers/: AAPL_daily_thr200_w1-5.joblib
models/classification/thresholds/: AAPL_daily_thr200_w1-5.json
models/metrics/classification/: AAPL_daily_thr200_w1-5.json
models/regression/daily/: AAPL_daily_ridge_1d.joblib  AAPL_daily_ridge_1w.joblib  AAPL_daily_ridge_2d.joblib  AAPL_daily_ridge_3d.joblib  AAPL_daily_ridge_5d.joblib
models/regression/weekly/: AAPL_weekly_ridge_1d.joblib  AAPL_weekly_ridge_2d.joblib  AAPL_weekly_ridge_3d.joblib  AAPL_weekly_ridge_5d.joblib
models/scalers/: AAPL_daily_scaler.pkl  AAPL_weekly_scaler.pkl
scripts/: __init__.py  backtesting.py  classification_pipeline.py  data_ingestion.py  data_pipeline.py  diagnostic_outputs.py  diagnostics.py  feature_engineering.py  inference.py  orchestrator.py  regression_training.py  targets.py  time_splits.py  training_validation.py
(+25 files in other folders)
