[project]
name = "on-the-go-coding-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "yfinance",
    "joblib",
    "dash",
    "dash-bootstrap-components",
    "plotly",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]
